# GB_Robotics_py

./: .gitignore  GB_Robotics_py.sln  README.md  pyproject.toml
dotnet_bridge/: FanucSimulatorBridge.cs  GBRobotics.PythonBridge.csproj
gb_robotics_py/: __init__.py  api.py  cli.py  view_joint_log.py  vis_graph_cmd.py  vis_graph_data.py  vis_graph_html.py
scripts/: debug_fk_ik.py
scripts/logs/: REGS_6AX.JSON  short.CSV
